# RM-task

./: README.md  hello world.c  stack.cpp  str.c  字符三角形.c  输出字符菱形.c
C++/: queue  rectangle.cpp  stack.cpp
Fliter1/: .git.txt  fliter.cpp
Fliter2/: Fliter2.cpp  kalman_data.txt
Fliter3/: Fliter3.cpp
Fliter4/: Fliter4.cpp
Kalman Fliter/test1/: cpp
Kalman Fliter/test2/: cpp
Kalman Fliter/test3/: cpp
Kalman Fliter/test4/: cpp
Opencv/: main.cpp  task1  task2  示例图的装甲板检测
Opencv/2024Winter/: 番茄酱包检测
Opencv/2025/: CMakeLists.txt  main.cpp
Opencv/2025/相机标定/: Code  camera_calibration.yml
Opencv/2025/装甲板识别/: main.cpp
luogu/: A+B problem.c  try.c  字符三角形.c  输出字符菱形.c
